# django-testing

./: pyproject.toml
django_testing/: db.sqlite3
django_testing/dj/: apps.py  models.py  views.py
django_testing/dj/migrations/: 0001_initial.py
django_testing/django_testing/: asgi.py  settings.py  urls.py  wsgi.py
django_testing/templates/: profile.html
